[M]修复测试代码中的jdk 16遗留。